--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="title_activity_welcome">WelcomeActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_voice_record">VoiceRecordActivity</string>
 
 </resources>
