--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_voice_record">VoiceRecordActivity</string>
+    <string name="title_activity_add_note">AddNoteActivity</string>
 
 </resources>
