--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_voice_record">VoiceRecordActivity</string>
     <string name="title_activity_add_note">AddNoteActivity</string>
+    <string name="title_activity_sound_play">SoundPlayActivity</string>
+    <string name="title_activity_photo_view">PhotoViewActivity</string>
 
 </resources>
