--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">PunAdventure</string>
-    <string name="title_note_detail">Note Detail</string>
-    <string name="title_activity_welcome">WelcomeActivity</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Adventure!</string>
+    <string name="title_note_detail">You found a note!</string>
+    <string name="title_activity_welcome">Welcome to Adventure!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_voice_record">VoiceRecordActivity</string>
-    <string name="title_activity_add_note">AddNoteActivity</string>
-    <string name="title_activity_sound_play">SoundPlayActivity</string>
-    <string name="title_activity_photo_view">PhotoViewActivity</string>
+    <string name="title_activity_voice_record">Record a Voice Memo</string>
+    <string name="title_activity_add_note">Add a Note</string>
+    <string name="title_activity_sound_play">Play a Voice Memo</string>
+    <string name="title_activity_photo_view">View a Photo</string>
 
 </resources>
